--- a/Assignment1/app/src/main/res/layout/activity_main.xml
+++ b/Assignment1/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,15 @@
         android:textColor="#FFFFFF"
         android:padding="10dp" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:visibility="gone" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
