--- a/Assignment2/app/src/main/res/layout/currency_fragment.xml
+++ b/Assignment2/app/src/main/res/layout/currency_fragment.xml
@@ -37,24 +37,50 @@
         android:layout_height="wrap_content"
         android:hint="Enter currency value"
         android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf="@id/currencySpinnerTo"
+        app:layout_constraintBottom_toTopOf="@id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/currencySpinnerFrom"
         app:layout_constraintVertical_bias="0.1" />
 
-    <Spinner
-        android:id="@+id/currencySpinnerTo"
+    <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:entries="@array/currencies"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/outputTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintTop_toBottomOf="@id/inputEditText"
+        app:layout_constraintVertical_bias="0.2">
+
+        <!-- RadioButtons for different currencies -->
+        <RadioButton
+            android:id="@+id/radio_usd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="USD"
+            android:layout_marginEnd="16dp" />
+
+        <RadioButton
+            android:id="@+id/radio_eur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="EUR"
+            android:layout_marginEnd="16dp" />
+
+        <RadioButton
+            android:id="@+id/radio_jpy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JPY"
+            android:layout_marginEnd="16dp" />
+
+        <!-- Add more RadioButtons as needed -->
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/convertButton"
@@ -78,6 +104,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currencySpinnerTo"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         app:layout_constraintVertical_bias="0.206" />
 </androidx.constraintlayout.widget.ConstraintLayout>
